<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="8dp"
    app:cardElevation="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="20dp"
            android:text="@string/question"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/text_size_media" />

        <View
            style="@style/edite_line"
            android:layout_marginBottom="10dp" />

        <ListView
            android:id="@+id/list_scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:divider="@null"
            android:dividerHeight="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/rb_cancel"
                style="@style/popup_footer"
                android:background="#F2F0F3"
                android:text="@string/search_cancel"
                android:textColor="@color/theme_color" />

            <TextView
                android:id="@+id/rb_ok"
                style="@style/popup_footer"
                android:background="@color/theme_color"
                android:text="@string/login_forget_conform"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>




