<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="36dp">

        <ImageView
            android:id="@+id/iv_speaker"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="centerCrop"
            android:src="@drawable/professor_default" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_speaker_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="德古拉.凯奇.徐波"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_speaker_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="2"
                android:text="@string/secretary_info"
                android:textColor="@color/normal_gray"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f0EFF4"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/layout_padding"
            android:text="@string/secretary_title"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_media" />

        <TextView
            android:id="@+id/tv_speaker_detail_day"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/detail_yes"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/my_time"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_media" />

        <TextView
            android:id="@+id/tv_speaker_detail_woke"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginRight="12dp"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/my_role"
            android:textSize="@dimen/text_size_media" />
    </LinearLayout>

</LinearLayout>